--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "devDependencies": {
     "@types/react": "18.2.38",
     "@types/react-dom": "18.2.15",
-    "typescript": "4.4.4"
+    "typescript": "4.4.4",
+    "@babel/plugin-proposal-private-property-in-object": "^7.14.5"  // Add this line
   },
   "scripts": {
     "start": "react-scripts start",
