--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,18 @@
         "./src/**/*"
     ],
     "compilerOptions": {
-        "strict": true,
-        "esModuleInterop": true,
+        "target": "es5",                      // Compile to ES5 for wider compatibility
+        "module": "commonjs",                 // Use CommonJS module system
+        "strict": true,                       // Enable all strict type-checking options
+        "esModuleInterop": true,              // Enables emit interoperability between CommonJS and ES Modules
+        "skipLibCheck": true,                 // Skip type checking of all declaration files for faster builds
+        "forceConsistentCasingInFileNames": true, // Ensure consistent file name casing
         "lib": [
             "dom",
             "es2015"
         ],
-        "jsx": "react-jsx"
+        "jsx": "react-jsx",
+        "outDir": "./dist",                   // Output directory for compiled files
+        "sourceMap": true                      // Generate source maps for debugging
     }
 }
