--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@types/react": "18.2.38",
     "@types/react-dom": "18.2.15",
     "typescript": "4.4.4",
-    "@babel/plugin-proposal-private-property-in-object": "^7.14.5"  // Add this line
+    "@babel/plugin-proposal-private-property-in-object": "^7.14.5"  
   },
   "scripts": {
     "start": "react-scripts start",
